--- a/arxiv/2022_11_arxiv.html
+++ b/arxiv/2022_11_arxiv.html
@@ -44,6 +44,43 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20221101</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.17192">https://arxiv.org/abs/2210.17192</a></span> Beyond quantum chaos in emergent dual holography **** (Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.16325">https://arxiv.org/abs/2210.16325</a></span> Jamming and Unusual Charge Density Fluctuations of Strange Metals **** (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.17485">https://arxiv.org/abs/2210.17485</a></span> Strange Correlation Function for Average Symmetry-Protected Topological Phases **** (Jian-Hao Zhang, Yang Qi, Zhen Bi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.16321">https://arxiv.org/abs/2210.16321</a></span> Resonating valence bond states and other surprises in an electron-phonon system *** (Zhaoyu Han, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.16323">https://arxiv.org/abs/2210.16323</a></span> Symmetry protected topological phases under decoherence ***** (Jong Yeon Lee, Yi-Zhuang You, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.16676">https://arxiv.org/abs/2210.16676</a></span> Path-integral approaches to strongly-coupled quantum many-body systems</p>
+<p class="p2"><br></p>
+<p class="p1">20221102</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00034">https://arxiv.org/abs/2211.00034</a></span> Exact solution of the topological symplectic Kondo problem ***** (Elio J. K ̈oniga, Alexei M. Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00263">https://arxiv.org/abs/2211.00263</a></span> Gate-tunable heavy fermions in a moiré Kondo lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00299">https://arxiv.org/abs/2211.00299</a></span> Ground state degeneracy on torus in a family of Z<i>N </i>toric code **** (Haruki Watanabe, Meng Cheng, Yohei Fuji)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00040">https://arxiv.org/abs/2211.00040</a></span> Floquet’s Refrigerator: Conformal Cooling in Driven Quantum Critical Systems **** (Xueda Wen, Ruihua Fan, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00017">https://arxiv.org/abs/2211.00017</a></span> Non-Abelian Floquet Spin Liquids in a Digital Rydberg Simulator **** (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00023">https://arxiv.org/abs/2211.00023</a></span> Finding the ground state of a lattice gauge theory with fermionic tensor networks: a 2+1dZ2 demonstration</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00318">https://arxiv.org/abs/2211.00318</a></span> Quantum oscillations of Kondo screening phases in strong magnetic fields</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00043">https://arxiv.org/abs/2211.00043</a></span> Fermionic Isometric Tensor Network States in Two Dimensions (Michael P. Zaletel )</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00210">https://arxiv.org/abs/2211.00210</a></span> On the intermediate Jacobian of M5-branes (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09283">https://arxiv.org/abs/2103.09283</a></span> Non-unitary TQFTs from 3D N = 4 rank 0 SCFTs (Dongmin Gang, Kimyeong Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20221103</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01352">https://arxiv.org/abs/2211.01352</a></span> Electronic anisotropy in magic-angle twisted trilayer graphene *** (Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00682">https://arxiv.org/abs/2211.00682</a></span> Higher-Order Nodal Hinge States in Doped Superconducting Topological Insulator *** (Jennifer Cano, Enrico Rossi, Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00665">https://arxiv.org/abs/2211.00665</a></span> A Criterion for Strange Metallicity in the Lorenz Ratio *** (Evyatar Tulipman, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00658">https://arxiv.org/abs/2211.00658</a></span> Untwisting moiré physics: Almost ideal bands and fractional Chern insulators in periodically strained monolayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01360">https://arxiv.org/abs/2211.01360</a></span> High-field quantum spin liquid transitions and angle-field phase diagram of Kitaev magnet α-RuCl3</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.13349">https://arxiv.org/abs/2207.13349</a></span> Dirac fermions with plaquette interactions. III. 𝑆𝑈(𝑁) phase diagram with Gross-Neveu criticality and first-order phase transition (Zi Yang Meng, Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.02208">https://arxiv.org/abs/2012.02208</a></span> Fractonic gauge theory of smectics **** (Leo Radzihovsky)</p>
+<p class="p2"><br></p>
+<p class="p1">20221104</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01388">https://arxiv.org/abs/2211.01388</a></span> Sublattice Interference promotes Pair Density Wave order in Kagome Metals ***** (Yi-Ming Wu, S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01380">https://arxiv.org/abs/2211.01380</a></span> Large-Scale 2 + 1D U(1) Gauge Theory with Dynamical Matter in a Cold-Atom Quantum Simulator (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.00679">https://arxiv.org/abs/2211.00679</a></span> Quantum phase transitions in non-Hermitian PT -symmetric transverse-field Ising spin chains ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01650">https://arxiv.org/abs/2211.01650</a></span> Universality and its limits in non-Hermitian many-body quantum chaos using the Sachdev-Ye-Kitaev model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01376">https://arxiv.org/abs/2211.01376</a></span> Higgs Condensates are Symmetry-Protected Topological Phases: I. Discrete Symmetries **** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01381">https://arxiv.org/abs/2211.01381</a></span> Quantum Spin Puddles and Lakes: NISQ-Era Spin Liquids from Non-Equilibrium Dynamics (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01390">https://arxiv.org/abs/2211.01390</a></span> Strange-metal behavior in a Fermi liquid with strange scatterers *** (Erez Berg, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.08304">https://arxiv.org/abs/2110.08304</a></span> Nonlinear Landauer formula: Nonlinear response theory of disordered and topological materials *** (Masahito Ueda)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
