--- a/arxiv/2022_11_arxiv.html
+++ b/arxiv/2022_11_arxiv.html
@@ -81,6 +81,72 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01381">https://arxiv.org/abs/2211.01381</a></span> Quantum Spin Puddles and Lakes: NISQ-Era Spin Liquids from Non-Equilibrium Dynamics (Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01390">https://arxiv.org/abs/2211.01390</a></span> Strange-metal behavior in a Fermi liquid with strange scatterers *** (Erez Berg, Steven A. Kivelson)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.08304">https://arxiv.org/abs/2110.08304</a></span> Nonlinear Landauer formula: Nonlinear response theory of disordered and topological materials *** (Masahito Ueda)</p>
+<br>
+<p class="p1">20221107</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.02086">https://arxiv.org/pdf/2211.02086</a></span> INVERTIBLE SUBALGEBRAS **** (JEONGWAN HAAH)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.02492">https://arxiv.org/pdf/2211.02492</a></span> Multilayer graphenes as a platform for interaction-driven physics and topological superconductivity *** (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.02649">https://arxiv.org/pdf/2211.02649</a></span> Polar hairs of mixed-parity nodal superconductors in Rarita-Schwinger-Weyl metals *** (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.02071">https://arxiv.org/pdf/2211.02071</a></span> Magnetic quantum phase transition in a metallic Kondo heterostructure *** (Lukas Janssen, Matthias Vojta, Fakher F. Assaad)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.02444">https://arxiv.org/pdf/2211.02444</a></span> Quench dynamics of the Kondo effect: transport across an impurity coupled to interacting wires ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2209.00236">https://arxiv.org/pdf/2209.00236</a></span> Non-Hermitian skin effect and lasing of absorbing open-boundary modes in photonic crystals</p>
+<p class="p2"><a href="https://arxiv.org/pdf/2209.01485">https://arxiv.org/pdf/2209.01485</a><span class="s2"> Maxwell theory of fractons</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.00210">https://arxiv.org/pdf/2211.00210</a></span> On the intermediate Jacobian of M5-branes (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2207.08585">https://arxiv.org/pdf/2207.08585</a></span> Fractons on Graphs and Complexity (Pranay Gorantla, Ho Tat Lam, Shu-Heng Shao)</p>
+<p class="p3"><br></p>
+<p class="p1">20221108</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.02663">https://arxiv.org/pdf/2211.02663</a></span> Quantum noise spectroscopy of dynamical critical phenomena (Francisco Machado, Eugene A. Demler, Norman Y. Yao, Shubhayu Chatterjee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.02668">https://arxiv.org/pdf/2211.02668</a></span> Interplay of superconductivity and localization near a 2D ferromagnetic quantum critical point ***** (S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.03777">https://arxiv.org/pdf/2211.03777</a></span> Dualities in one-dimensional quantum lattice models: topological sectors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.03737">https://arxiv.org/pdf/2211.03737</a></span> Non-Kitaev vs. Kitaev Honeycomb Cobaltates (Hae-Young Kee)</p>
+<p class="p3"><br></p>
+<p class="p1">20221109</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.03802">https://arxiv.org/pdf/2211.03802</a></span> Classification of Interacting Dirac Semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2112.08620">https://arxiv.org/pdf/2112.08620</a></span> Narrow bands in magnetic field and strong-coupling Hofstadter spectra (Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2207.10475">https://arxiv.org/pdf/2207.10475</a></span> Emergent space-time meets emergent quantum phenomena: observing quantum phase transitions in a moving frame (Jinwu Ye)</p>
+<p class="p3"><br></p>
+<p class="p1">20221110</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.04959">https://arxiv.org/pdf/2211.04959</a></span> From Elastic Spin to Phonon Spin: Symmetry and Fundamental Relations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.04467">https://arxiv.org/pdf/2211.04467</a></span> A Panorama Of Physical Mathematics c. 2022 *****</p>
+<p class="p3"><br></p>
+<p class="p1">20221111</p>
+<p class="p2"><a href="https://arxiv.org/pdf/2211.05192">https://arxiv.org/pdf/2211.05192</a><span class="s2"> Wiedemann-Franz law in graphene</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.05130">https://arxiv.org/pdf/2211.05130</a></span> Fracton Matter *** (Andrey Gromov, Leo Radzihovsky)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.05358">https://arxiv.org/pdf/2211.05358</a></span> Multi-criticality and long-range effects in non-Hermitian topological models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.05784">https://arxiv.org/pdf/2211.05784</a></span> The X-Cube Floquet Code (Sagar Vijay)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2211.05771">https://arxiv.org/pdf/2211.05771</a></span> Multi-criticality and field induced non-BEC transition in frustrated magnets (Shouvik Sur)</p>
+<br>
+<p class="p1">20221114</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.06156">https://arxiv.org/abs/2211.06156</a></span> Spontaneous antiferromagnetic skyrmion/antiskyrmion lattice and spiral spin liquid states in the frustrated triangular lattice</p>
+<p class="p2"><br></p>
+<p class="p1">20221115</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.06668">https://arxiv.org/abs/2211.06668</a></span> Topological Gauge Fields and the Composite Particle Duality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.07406">https://arxiv.org/abs/2211.07406</a></span> Orbital Fulde-Ferrell pairing state in moir ́e Ising superconductors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.06467">https://arxiv.org/abs/2211.06467</a></span> Anomalies and the Green-Schwarz Mechanism</p>
+<p class="p2"><br></p>
+<p class="p1">20221116</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.07658">https://arxiv.org/abs/2211.07658</a></span> Holographic measurement and quantum teleportation in the SYK thermofield double *** (Shao-Kai Jian, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08354">https://arxiv.org/abs/2211.08354</a></span> Lattice Instability of UTe2 Studied by Ultrasonic Measurements</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08421">https://arxiv.org/abs/2211.08421</a></span> Drag resistance mediated by quantum spin liquids *** (Elio J. K ̈onig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.07676">https://arxiv.org/abs/2211.07676</a></span> Topological Quantization of Superfluid Stiffness in Dirac Materials ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.07920">https://arxiv.org/abs/2211.07920</a></span> Topological phase in Kitaev chain with spatially separated pairing processes ***</p>
+<p class="p2"><br></p>
+<p class="p1">20221117</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08449">https://arxiv.org/abs/2211.08449</a></span> Enhanced eigenvector sensitivity and algebraic classification of sublattice-symmetric exceptional points *** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08484">https://arxiv.org/abs/2211.08484</a></span> Energy Transport Induced by Transition from Weak to Strong Coupling Regime Between Non-Hermitian systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08853">https://arxiv.org/abs/2211.08853</a></span> Quantum mechanics of open systems: Dissipaton theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08438">https://arxiv.org/abs/2211.08438</a></span> Orbital magnetic quadrupole moment in higher order topological phases *** (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08895">https://arxiv.org/abs/2211.08895</a></span> Fate of exceptional points under interactions: Reduction of topological classifications ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08814">https://arxiv.org/abs/2211.08814</a></span> Microscopic origin of local electric polarization in NiPS3 *** (Ki-Seok Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20221118</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09127">https://arxiv.org/abs/2211.09127</a></span> Quantized charge polarization as a many-body invariant in (2+1)D crystalline topological states and Hofstadter butterflies *** (Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09140">https://arxiv.org/abs/2211.09140</a></span> Thermal three-point functions from holographic Schwinger-Keldysh contours **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09745">https://arxiv.org/abs/2211.09745</a></span> Universal scaling of Klein bottle entropy near conformal critical points</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09384">https://arxiv.org/abs/2211.09384</a></span> Strain Fields and Critical Phenomena in Manganites I: Spin-Lattice Hamiltonians</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09387">https://arxiv.org/abs/2211.09387</a></span> Strain Fields and Critical Phenomena in Manganites II: Spin-Lattice-Energy Hamiltonians</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09803">https://arxiv.org/abs/2211.09803</a></span> Exact Quantum Algorithms for Quantum Phase Recognition: Renormalization Group and Error Correction ***** (Ethan Lake, Shankar Balasubramanian, Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09143">https://arxiv.org/abs/2211.09143</a></span> Robust d-wave superconductivity from the Su-Schrieffer-Heeger-Hubbard model: possible route to high-temperature superconductivity *** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09168">https://arxiv.org/abs/2211.09168</a></span> Ground state degeneracy of the Ising cage-net model *** (Xie Chen)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
