--- a/arxiv/2022_11_arxiv.html
+++ b/arxiv/2022_11_arxiv.html
@@ -146,7 +146,35 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09387">https://arxiv.org/abs/2211.09387</a></span> Strain Fields and Critical Phenomena in Manganites II: Spin-Lattice-Energy Hamiltonians</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09803">https://arxiv.org/abs/2211.09803</a></span> Exact Quantum Algorithms for Quantum Phase Recognition: Renormalization Group and Error Correction ***** (Ethan Lake, Shankar Balasubramanian, Soonwon Choi)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09143">https://arxiv.org/abs/2211.09143</a></span> Robust d-wave superconductivity from the Su-Schrieffer-Heeger-Hubbard model: possible route to high-temperature superconductivity *** (Hong Yao)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09168">https://arxiv.org/abs/2211.09168</a></span> Ground state degeneracy of the Ising cage-net model *** (Xie Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09168">https://arxiv.org/abs/2211.09168</a></span> Ground state degeneracy of the Ising cage-net model *** (Xie Chen)</p><br>
+<p class="p1">20221121</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.10101">https://arxiv.org/abs/2211.10101</a></span> Higher order topological state induced by d-wave competing orders in high-Tc superconductor based heterostructure</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.10424">https://arxiv.org/abs/2211.10424</a></span> Quantum theory of light-driven coherent lattice dynamics</p>
+<p class="p2"><br></p>
+<p class="p1">20221122</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.10453">https://arxiv.org/abs/2211.10453</a></span> Fractionalized Prethermalization in a Driven Quantum Spin Liquid *** (Johannes Knolle, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.10975">https://arxiv.org/abs/2211.10975</a></span> Yang-Lee Singularity in BCS Superconductivity ***** (Masaya Nakagawa, Masahito Ueda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.10452">https://arxiv.org/abs/2211.10452</a></span> Spin density wave, Fermi liquid, and fractionalized phases in a theory of antiferromagnetic metals using paramagnons and bosonic spinons ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.10458">https://arxiv.org/abs/2211.10458</a></span> Gapless Infinite-component Chern-Simons-Maxwell Theories **** (Xie Chen, Ho Tat Lam)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.11622">https://arxiv.org/abs/2211.11622</a></span> Fractionalization in Fractional Correlated Insulating States at n ± 1/3 filled twisted bilayer graphene **** (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.11735">https://arxiv.org/abs/2211.11735</a></span> Shot noise as a characterization of strongly correlated metals (Shouvik Sur, Silke Paschen, Qimiao Si)</p>
+<p class="p2"><br></p>
+<p class="p1">20221123</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.12274">https://arxiv.org/abs/2211.12274</a></span> Relaxation and domain wall structure of bilayer moir ́e systems (Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.12394">https://arxiv.org/abs/2211.12394</a></span> Fermionic defects of topological phases and logical gates ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.11764">https://arxiv.org/abs/2211.11764</a></span> Higher-group symmetry in finite gauge theory and stabilizer codes *** (Maissam Barkeshli, Yu-An Chen, Po-Shen Hsin, Ryohei Kobayashi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.11775">https://arxiv.org/abs/2211.11775</a></span> Phases of Wilson Lines in Conformal Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10712">https://arxiv.org/abs/2207.10712</a></span> Topological holography: Towards a unification of Landau and beyond-Landau physics</p>
+<p class="p2"><br></p>
+<p class="p1">20221124</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.13207">https://arxiv.org/abs/2211.13207</a></span> Theory of topological defects and textures in two-dimensional quantum orders with spontaneous symmetry breaking</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.12543">https://arxiv.org/abs/2211.12543</a></span> Lieb-Schultz-Mattis, Luttinger, and ’t Hooft – anomaly matching in lattice systems *** (Meng Cheng, Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.12525">https://arxiv.org/abs/2211.12525</a></span> Relating non-Hermitian and Hermitian quantum systems at criticality **** (Chang-Tse Hsieh, Po-Yao Chang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.13047">https://arxiv.org/abs/2211.13047</a></span> Lattice Quantum Villain Hamiltonians: Compact scalars, U(1) gauge theories, fracton models and Quantum Ising model dualities</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.12834">https://arxiv.org/abs/2211.12834</a></span> Magnetic-field driven delocalization of in-gap-state BdG quasiparticles in a quasi-two-dimensional Fe- based superconductor (Hae-Ryong Park, Kyung-Yong Park, Kyoung-Min Kim, Jun-Sung Kim, Hanwoong Yeom , Ki-Seok Kim, Jhinhwan Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02808">https://arxiv.org/abs/2206.02808</a></span> Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments ***** (SangEun Han, Daniel J. Schultz, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.07255">https://arxiv.org/abs/2208.07255</a></span> Quantum Transport and Magnetism of Dirac Electrons in Solids (Hiroki Isobe, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07120">https://arxiv.org/abs/2209.07120</a></span> Delocalization and re-entrant localization of flat-band states in non-Hermitian disordered lattice models with flat bands</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
