--- a/arxiv/2022_11_arxiv.html
+++ b/arxiv/2022_11_arxiv.html
@@ -174,7 +174,27 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.12834">https://arxiv.org/abs/2211.12834</a></span> Magnetic-field driven delocalization of in-gap-state BdG quasiparticles in a quasi-two-dimensional Fe- based superconductor (Hae-Ryong Park, Kyung-Yong Park, Kyoung-Min Kim, Jun-Sung Kim, Hanwoong Yeom , Ki-Seok Kim, Jhinhwan Lee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02808">https://arxiv.org/abs/2206.02808</a></span> Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments ***** (SangEun Han, Daniel J. Schultz, Yong Baek Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.07255">https://arxiv.org/abs/2208.07255</a></span> Quantum Transport and Magnetism of Dirac Electrons in Solids (Hiroki Isobe, Naoto Nagaosa)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07120">https://arxiv.org/abs/2209.07120</a></span> Delocalization and re-entrant localization of flat-band states in non-Hermitian disordered lattice models with flat bands</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07120">https://arxiv.org/abs/2209.07120</a></span> Delocalization and re-entrant localization of flat-band states in non-Hermitian disordered lattice models with flat bands</p><br>
+<p class="p1">20221128</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.13721">https://arxiv.org/abs/2211.13721</a></span> From Hermitian critical to non-Hermitian point-gapped phases</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.11786">https://arxiv.org/abs/2211.11786</a></span> Model-Independent Learning of Quantum Phases of Matter with Quantum Convolutional Neural Networks (Michael Knap, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10396">https://arxiv.org/abs/2209.10396</a></span> Coupled topological flat and wide bands: Quasiparticle formation and destruction (Haoyu Hu, Qimiao Si)</p>
+<p class="p2"><br></p>
+<p class="p1">20221129</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.14991">https://arxiv.org/abs/2211.14991</a></span> Quasiparticles of Decoherence Processes in Open Quantum Many-Body Systems: Incoherentons *** (Masahito Ueda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15598">https://arxiv.org/abs/2211.15598</a></span> Topological and quantum critical properties of the interacting Majorana chain model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15305">https://arxiv.org/abs/2211.15305</a></span> AdS/CFT Correspondence with a 3D Black Hole Simulator (Jiannis K. Pachos)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.14337">https://arxiv.org/abs/2211.14337</a></span> Two Dimensional Isometric Tensor Networks on an Infinite Strip (Frank Pollmann, Michael P. Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15391">https://arxiv.org/abs/2211.15391</a></span> Flat bands in Network Superstructures of Atomic Chains (Jun-Won Rhim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15035">https://arxiv.org/abs/2211.15035</a></span> Bulk–Boundary Correspondence and Boundary Zero Modes in a Non-Hermitian Kitaev Chain Model</p>
+<p class="p2"><br></p>
+<p class="p1">20221130</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.16094">https://arxiv.org/abs/2211.16094</a></span> Kekule spin-orbit dimer phase and triplon dynamics ***** (GiBaik Sim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15682">https://arxiv.org/abs/2211.15682</a></span> Kondo lattice model in magic-angle twisted bilayer graphene (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.16150">https://arxiv.org/abs/2211.16150</a></span> Dirac Kondo effect under magnetic catalysis ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.16365">https://arxiv.org/abs/2211.16365</a></span> Reckoning with the Mother of all non-Fermi liquids: alien bosonization vs predator holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.16296">https://arxiv.org/abs/2211.16296</a></span> Spin-liquid insulators can be Landau’s Fermi liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15680">https://arxiv.org/abs/2211.15680</a></span> Remarks on Berry Connection in QFT, Anomalies, and Applications</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
