--- a/arxiv/2022_12_arxiv.html
+++ b/arxiv/2022_12_arxiv.html
@@ -63,7 +63,32 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00707">https://arxiv.org/abs/2212.00707</a></span> Emergent Symmetry in Frustrated Magnets: From Deconfined Quantum Critical Point to Gapless Quantum Spin Liquid</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.13529">https://arxiv.org/abs/2205.13529</a></span> Triplet pairing mechanisms from Hund’s-Kondo models: applications to UTe2 and CeRh2As2 *** (Piers Coleman)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00194">https://arxiv.org/abs/2212.00194</a></span> Complementarity and the unitarity of the black hole S-matrix (Isaac H. Kim, John Preskill)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00195">https://arxiv.org/abs/2212.00195</a></span> INTRODUCTION TO TOPOLOGICAL SYMMETRY IN QFT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00195">https://arxiv.org/abs/2212.00195</a></span> INTRODUCTION TO TOPOLOGICAL SYMMETRY IN QFT</p><br>
+<p class="p1">20221205</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.01374">https://arxiv.org/abs/2212.01374</a></span> Universal chiral Luttinger liquid behaviour in a graphene fractional quantum Hall point contact (Michael P. Zaletel, Andrea F. Young)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.01318">https://arxiv.org/abs/2212.01318</a></span> Quantum effects on unconventional pinch point singularities *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00854">https://arxiv.org/abs/2212.00854</a></span> Effective quasiclassical models for odd-frequency superconductivity: energy-symmetry, preserved spectral weight, and Meissner response</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02444">https://arxiv.org/abs/2210.02444</a></span> Anomaly of (2 + 1)-Dimensional Symmetry-Enriched Topological Order from (3 + 1)-Dimensional Topological Quantum Field Theory (Weicheng Ye, Liujun Zou)</p>
+<p class="p2"><br></p>
+<p class="p1">20221206</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.01654">https://arxiv.org/abs/2212.01654</a></span> Field theory for the Almeida-Thouless transition ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.01637">https://arxiv.org/abs/2212.01637</a></span> Quantum Scars in Quantum Field Theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.02389">https://arxiv.org/abs/2212.02389</a></span> Current- and field-induced topology in twisted nodal superconductors **** (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.11484">https://arxiv.org/abs/2108.11484</a></span> Phonon induced rank-2 U(1) nematic liquid states **** (Han Yan, Andriy H. Nevidomskyy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.04817">https://arxiv.org/abs/2107.04817</a></span> Classical Shadow Tomography with Locally Scrambled Quantum Dynamics ***** (Soonwon Choi, Yi-Zhuang You)</p>
+<p class="p2"><br></p>
+<p class="p1">20221207</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.02517">https://arxiv.org/abs/2212.02517</a></span> Measuring Arbitrary Physical Properties in Analog Quantum Simulation ***** (Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.02516">https://arxiv.org/abs/2212.02516</a></span> Spin excitation continuum to topological magnon crossover and thermal Hall conductivity in Kitaev magnets ***** (Emily Z. Zhang, Reja H. Wilke, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.03210">https://arxiv.org/abs/2212.03210</a></span> Isolated flat bands in 2D lattices based on a novel path-exchange symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.02812">https://arxiv.org/abs/2212.02812</a></span> Topological Hall effect induced by classical large-spin background: <span class="s2">𝑠𝑢</span>(2) path-integral approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.02756">https://arxiv.org/abs/2212.02756</a></span> The absence of Ginzburg-Landau mechanism for vestigial order in the normal phase above a two-component superconductor</p>
+<p class="p2"><br></p>
+<p class="p1">20221208</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.03265">https://arxiv.org/abs/2212.03265</a></span> Quantum chaos and phase transition in the Yukawa-SYK model ***** (Yuxuan Wang)</p>
+<p class="p2"><br></p>
+<p class="p1">20221209</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.03901">https://arxiv.org/abs/2212.03901</a></span> Universal KPZ scaling in noisy hybrid quantum circuits **** (Shao-Kai Jian, Hong Yao)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
